--- a/src/ResourceManager/Network/Commands.Network/Commands.Network.csproj
+++ b/src/ResourceManager/Network/Commands.Network/Commands.Network.csproj
@@ -231,16 +231,16 @@
     <Compile Include="Models\PSConnectionMonitorSource.cs" />
     <Compile Include="Models\PSConnectionStateSnapshot.cs" />
     <Compile Include="Models\PSEndpointServiceResult.cs" />
-    <Compile Include="Models\PSSecureGateway.cs" />
-    <Compile Include="Models\PSSecureGatewayIpConfiguration.cs" />
-    <Compile Include="Models\PSSecureGatewayNetworkRuleAction.cs" />
-    <Compile Include="Models\PSSecureGatewayApplicationRuleAction.cs" />
-    <Compile Include="Models\PSSecureGatewayApplicationRuleProtocol.cs" />
-    <Compile Include="Models\PSSecureGatewayApplicationRule.cs" />
-    <Compile Include="Models\PSSecureGatewayApplicationRuleCollection.cs" />
-    <Compile Include="Models\PSSecureGatewayNetworkRule.cs" />
-    <Compile Include="Models\PSSecureGatewayNetworkRuleCollection.cs" />
-    <Compile Include="Models\PSSecureGatewaySku.cs" />
+    <Compile Include="Models\PSAzureFirewall.cs" />
+    <Compile Include="Models\PSAzureFirewallIpConfiguration.cs" />
+    <Compile Include="Models\PSAzureFirewallNetworkRuleAction.cs" />
+    <Compile Include="Models\PSAzureFirewallApplicationRuleAction.cs" />
+    <Compile Include="Models\PSAzureFirewallApplicationRuleProtocol.cs" />
+    <Compile Include="Models\PSAzureFirewallApplicationRule.cs" />
+    <Compile Include="Models\PSAzureFirewallApplicationRuleCollection.cs" />
+    <Compile Include="Models\PSAzureFirewallNetworkRule.cs" />
+    <Compile Include="Models\PSAzureFirewallNetworkRuleCollection.cs" />
+    <Compile Include="Models\PSAzureFirewallSku.cs" />
     <Compile Include="Models\PSServiceEndpoint.cs" />
     <Compile Include="Models\PSLoadBalancerSku.cs" />
     <Compile Include="Models\PSPublicIpAddressSku.cs" />
@@ -418,15 +418,15 @@
     <Compile Include="RouteTable\Route\RemoveAzureRmRouteConfigCommand.cs" />
     <Compile Include="RouteTable\Route\SetAzureRmRouteConfigCommand.cs" />
     <Compile Include="RouteTable\SetAzureRMRouteTableCommand.cs" />
-    <Compile Include="SecureGateway\ApplicationRuleCollection\NewAzureSecureGatewayApplicationRuleCollectionCommand.cs" />
-    <Compile Include="SecureGateway\ApplicationRule\NewAzureSecureGatewayApplicationRuleCommand.cs" />
-    <Compile Include="SecureGateway\GetAzureSecureGatewayCommand.cs" />
-    <Compile Include="SecureGateway\NetworkRuleCollection\NewAzureSecureGatewayApplicationRuleCollectionCommand.cs" />
-    <Compile Include="SecureGateway\NetworkRule\NewAzureSecureGatewayNetworkRuleCommand.cs" />
-    <Compile Include="SecureGateway\NewAzureSecureGatewayCommand.cs" />
-    <Compile Include="SecureGateway\RemoveAzureSecureGatewayCommand.cs" />
-    <Compile Include="SecureGateway\SecureGatewayBaseCmdlet.cs" />
-    <Compile Include="SecureGateway\SetAzureSecureGatewayCommand.cs" />
+    <Compile Include="AzureFirewall\ApplicationRuleCollection\NewAzureFirewallApplicationRuleCollectionCommand.cs" />
+    <Compile Include="AzureFirewall\ApplicationRule\NewAzureFirewallApplicationRuleCommand.cs" />
+    <Compile Include="AzureFirewall\GetAzureFirewallCommand.cs" />
+    <Compile Include="AzureFirewall\NetworkRuleCollection\NewAzureFirewallApplicationRuleCollectionCommand.cs" />
+    <Compile Include="AzureFirewall\NetworkRule\NewAzureFirewallNetworkRuleCommand.cs" />
+    <Compile Include="AzureFirewall\NewAzureFirewallCommand.cs" />
+    <Compile Include="AzureFirewall\RemoveAzureFirewallCommand.cs" />
+    <Compile Include="AzureFirewall\AzureFirewallBaseCmdlet.cs" />
+    <Compile Include="AzureFirewall\SetAzureFirewallCommand.cs" />
     <Compile Include="Usage\GetAzureNetworkUsageCommand.cs" />
     <Compile Include="VirtualNetworkGatewayConnection\GetAzureRmVirtualNetworkGatewayConnectionVpnDeviceConfigScript.cs" />
     <Compile Include="VirtualNetworkGatewayConnection\GetAzureRmVirtualNetworkGatewaySupportedVpnDevice.cs" />
