--- a/src/ResourceManager/StorageSync/Commands.StorageSync/Commands.StorageSync.csproj
+++ b/src/ResourceManager/StorageSync/Commands.StorageSync/Commands.StorageSync.csproj
@@ -15,6 +15,8 @@
     <RestorePackages>true</RestorePackages>
     <CodeAnalysisAdditionalOptions>/assemblyCompareMode:StrongNameIgnoringVersion</CodeAnalysisAdditionalOptions>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -43,10 +45,6 @@
     <DelaySign>true</DelaySign>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.Diagnostics.Tracing.EventSource, Version=1.1.28.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <HintPath>..\packages\Microsoft.Diagnostics.Tracing.EventSource.Redist.1.1.28\lib\net40\Microsoft.Diagnostics.Tracing.EventSource.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
@@ -58,13 +56,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AFSCmdlet.cs" />
-    <Compile Include="AFSDirectoryInfo.cs" />
-    <Compile Include="AFSFileInfo.cs" />
-    <Compile Include="AFSFileSystemInfo.cs" />
-    <Compile Include="Cmdlets\InvokeAzureRMStorageSyncCompatibilityCheckCmdlet.cs" />
-    <Compile Include="IProgressReporter.cs" />
-    <Compile Include="NodeCounter.cs" />
+    <Compile Include="AfsDirectoryInfo.cs" />
+    <Compile Include="AfsFileInfo.cs" />
+    <Compile Include="AfsFileSystemInfo.cs" />
+    <Compile Include="BaseNamespaceValidation.cs" />
+    <Compile Include="Cmdlets\InvokeCompatibilityCheckCmdlet.cs" />
+    <Compile Include="Interfaces\INamespaceInfo.cs" />
+    <Compile Include="Interfaces\IProgressReporter.cs" />
+    <Compile Include="NamespaceInfo.cs" />
     <Compile Include="OutputWriters\AFSConsoleWriter.cs" />
     <Compile Include="OutputWriters\ICmdlet.cs" />
     <Compile Include="OutputWriters\IConsoleWriter.cs" />
@@ -73,24 +72,21 @@
     <Compile Include="OutputWriters\TextSummaryOutputWriter.cs" />
     <Compile Include="ProgressReporter.cs" />
     <Compile Include="Configuration.cs" />
-    <Compile Include="IConfiguration.cs" />
-    <Compile Include="IDirectoryInfo.cs" />
-    <Compile Include="IFileInfo.cs" />
-    <Compile Include="IFileSystemInfo.cs" />
-    <Compile Include="INamespaceEnumeratorListener.cs" />
-    <Compile Include="IPowershellCommandRunner.cs" />
+    <Compile Include="Interfaces\IConfiguration.cs" />
+    <Compile Include="Interfaces\IDirectoryInfo.cs" />
+    <Compile Include="Interfaces\IFileInfo.cs" />
+    <Compile Include="Interfaces\INamedObjectInfo.cs" />
+    <Compile Include="Interfaces\INamespaceEnumeratorListener.cs" />
+    <Compile Include="Interfaces\IPowershellCommandRunner.cs" />
     <Compile Include="NamespaceEnumerator.cs" />
     <Compile Include="NamespaceValidationsProcessor.cs" />
     <Compile Include="PowerShellCommandRunner.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemValidationsProcessor.cs" />
-    <Compile Include="TelemetryEventSource.cs" />
-    <Compile Include="TelemetryEventSourceContract.cs" />
-    <Compile Include="UNCNetworkConnector.cs" />
-    <Compile Include="Validations\AggregateValidations\AggregateValidation.cs" />
-    <Compile Include="Validations\AggregateValidations\MaximumDatasetSizeValidation.cs" />
+    <Compile Include="UncNetworkConnector.cs" />
+    <Compile Include="Validations\NamespaceValidations\MaximumDatasetSizeValidation.cs" />
     <Compile Include="Validations\IValidationResult.cs" />
-    <Compile Include="Validations\NamespaceValidations\AFSPath.cs" />
+    <Compile Include="Validations\NamespaceValidations\AfsPath.cs" />
     <Compile Include="Validations\NamespaceValidations\FilenamesCharactersValidation.cs" />
     <Compile Include="Validations\NamespaceValidations\INamespaceValidation.cs" />
     <Compile Include="Validations\NamespaceValidations\InvalidFilenameValidation.cs" />
@@ -111,7 +107,6 @@
     These dependencies are needed for cmdlets talking to RP.
     Commented out since currently we are not talking to RP.
     -->
-
     <!--
     <ProjectReference Include="..\..\..\Common\Commands.Common.Authentication.Abstractions\Commands.Common.Authentication.Abstractions.csproj">
       <Project>{70527617-7598-4aef-b5bd-db9186b8184b}</Project>
@@ -150,13 +145,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.1.28\build\Microsoft.Diagnostics.Tracing.EventRegister.targets" Condition="Exists('..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.1.28\build\Microsoft.Diagnostics.Tracing.EventRegister.targets')" />
-  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-    <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
-    </PropertyGroup>
-    <Error Condition="!Exists('..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.1.28\build\Microsoft.Diagnostics.Tracing.EventRegister.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\packages\Microsoft.Diagnostics.Tracing.EventRegister.1.1.28\build\Microsoft.Diagnostics.Tracing.EventRegister.targets'))" />
-  </Target>
   <Import Project="..\..\..\..\tools\Common.Dependencies.targets" />
   <Target Name="AfterBuild">
     <ItemGroup>
