--- a/src/Common/Commands.Common.Authentication/Commands.Common.Authentication.csproj
+++ b/src/Common/Commands.Common.Authentication/Commands.Common.Authentication.csproj
@@ -137,10 +137,7 @@
     <Compile Include="ContextAutosaveSettings.cs" />
     <Compile Include="Extensions\CloudExceptionExtensions.cs" />
     <Compile Include="Factories\AuthenticationFactory.cs" />
-    <Compile Include="Factories\AzureHttpRetryPolicy.cs" />
-    <Compile Include="Factories\HyakRetryStrategy.cs" />
-    <Compile Include="Factories\AzureHttpRetryStrategy.cs" />
-    <Compile Include="Factories\HyakHttpRetryPolicy.cs" />
+    <Compile Include="Factories\CancelRetryHandler.cs" />
     <Compile Include="Factories\ClientFactory.cs" />
     <Compile Include="HttpClientOperationsFactory.cs" />
     <Compile Include="Utilities\HttpClientWithRetry.cs" />
