--- a/src/ResourceManager/DeviceProvisioningServices/Commands.DeviceProvisioningServices.Test/Commands.DeviceProvisioningServices.Test.Netcore.csproj
+++ b/src/ResourceManager/DeviceProvisioningServices/Commands.DeviceProvisioningServices.Test/Commands.DeviceProvisioningServices.Test.Netcore.csproj
@@ -4,8 +4,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <AssemblyName>Microsoft.Azure.Commands.PolicyInsights.Test</AssemblyName>
-    <RootNamespace>Microsoft.Azure.Commands.PolicyInsights.Test</RootNamespace>
+    <AssemblyName>Microsoft.Azure.Commands.DeviceProvisioningServices.Test</AssemblyName>
+    <RootNamespace>Microsoft.Azure.Commands.DeviceProvisioningServices.Test</RootNamespace>
     <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
@@ -22,7 +22,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.Management.PolicyInsights" Version="0.9.0-preview" />
+    <PackageReference Include="Microsoft.Azure.Management.DeviceProvisioningServices" Version="0.9.0-preview" />
+    <PackageReference Include="Microsoft.Azure.Management.IotHub" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -38,6 +39,12 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="ScenarioTests\*.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\Common\Commands.ScenarioTests.ResourceManager.Common\AzureRM.Resources.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
