--- a/src/ResourceManager/Compute/Commands.Compute.Test/Commands.Compute.Test.Netcore.csproj
+++ b/src/ResourceManager/Compute/Commands.Compute.Test/Commands.Compute.Test.Netcore.csproj
@@ -37,9 +37,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.KeyVault" Version="3.0.0-alpha" />
+    <PackageReference Include="Microsoft.Azure.KeyVault.WebKey" Version="3.0.0-alpha" />
     <PackageReference Include="Microsoft.Azure.Graph.RBAC" Version="3.4.0-preview" />
     <PackageReference Include="Microsoft.Azure.Management.Compute" Version="18.0.0" />
-    <PackageReference Include="Microsoft.Azure.Management.Network" Version="17.0.0-preview" />
+    <PackageReference Include="Microsoft.Azure.Management.KeyVault" Version="2.4.1-alpha" />
+    <PackageReference Include="Microsoft.Azure.Management.Network" Version="19.0.0-preview" />
     <PackageReference Include="Microsoft.Azure.Management.Storage" Version="7.1.0-preview" />
     <PackageReference Include="Moq" Version="4.7.145" />
   </ItemGroup>
