Add network rule collection to Azure Firewall

--- a/src/ResourceManager/Network/Commands.Network/Commands.Network.csproj
+++ b/src/ResourceManager/Network/Commands.Network/Commands.Network.csproj
@@ -218,6 +218,15 @@
     <Compile Include="ExpressRouteCircuit\RemoveAzureExpressRouteCircuitCommand.cs" />
     <Compile Include="ExpressRouteCircuit\SetAzureExpressRouteCircuitCommand.cs" />
     <Compile Include="ExpressRouteCircuit\ExpressRouteCircuitBaseCmdlet.cs" />
+    <Compile Include="Models\AzureFirewall\PSAzureFirewall.cs" />
+    <Compile Include="Models\AzureFirewall\PSAzureFirewallApplicationRuleProtocol.cs" />
+    <Compile Include="Models\AzureFirewall\PSAzureFirewallApplicationRule.cs" />
+    <Compile Include="Models\AzureFirewall\PSAzureFirewallApplicationRuleCollection.cs" />
+    <Compile Include="Models\AzureFirewall\PSAzureFirewallBaseRuleCollection.cs" />
+    <Compile Include="Models\AzureFirewall\PSAzureFirewallIpConfiguration.cs" />
+    <Compile Include="Models\AzureFirewall\PSAzureFirewallNetworkRule.cs" />
+    <Compile Include="Models\AzureFirewall\PSAzureFirewallNetworkRuleCollection.cs" />
+    <Compile Include="Models\AzureFirewall\PSAzureFirewallRCAction.cs" />
     <Compile Include="Models\PSApplicationGatewayBackendAddress.cs" />
     <Compile Include="Models\PSApplicationGatewayBackendAddressPool.cs" />
     <Compile Include="Models\PSApplicationGatewayProbeHealthResponseMatch.cs" />
@@ -231,15 +240,6 @@
     <Compile Include="Models\PSConnectionMonitorSource.cs" />
     <Compile Include="Models\PSConnectionStateSnapshot.cs" />
     <Compile Include="Models\PSEndpointServiceResult.cs" />
-    <Compile Include="Models\PSAzureFirewall.cs" />
-    <Compile Include="Models\PSAzureFirewallIpConfiguration.cs" />
-    <Compile Include="Models\PSAzureFirewallRCAction.cs" />
-    <Compile Include="Models\PSAzureFirewallApplicationRuleProtocol.cs" />
-    <Compile Include="Models\PSAzureFirewallApplicationRule.cs" />
-    <Compile Include="Models\PSAzureFirewallApplicationRuleCollection.cs" />
-    <Compile Include="Models\PSAzureFirewallNetworkRule.cs" />
-    <Compile Include="Models\PSAzureFirewallNetworkRuleCollection.cs" />
-    <Compile Include="Models\PSAzureFirewallSku.cs" />
     <Compile Include="Models\PSNetworkWatcherProtocolConfiguration.cs" />
     <Compile Include="Models\PSServiceEndpoint.cs" />
     <Compile Include="Models\PSLoadBalancerSku.cs" />
