--- a/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
+++ b/src/ResourceManager/Sql/Commands.Sql/Commands.Sql.csproj
@@ -224,6 +224,13 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="VulnerabilityAssessment\Cmdlet\GetAzureSqlDatabaseVulnerabilityAssessment.cs" />
+    <Compile Include="VulnerabilityAssessment\Cmdlet\RemoveSqlDatabaseVulnerabilityAssessment.cs" />
+    <Compile Include="VulnerabilityAssessment\Cmdlet\SetAzureSqlDatabaseVulnerabilityAssessment.cs" />
+    <Compile Include="VulnerabilityAssessment\Cmdlet\SqlDatabaseVulnerabilityAssessmentCmdletBase.cs" />
+    <Compile Include="VulnerabilityAssessment\Model\DatabaseVulnerabilityAssessmentPolicyModel.cs" />
+    <Compile Include="VulnerabilityAssessment\Services\SqlVulnerabilityAssessmentAdapter.cs" />
+    <Compile Include="VulnerabilityAssessment\Services\VulnerabilityAssessmentEndpointsCommunicator.cs" />
     <Content Include="Microsoft.Azure.Commands.Sql.format.ps1xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -458,7 +465,7 @@
     </ProjectReference>
     <Reference Include="Microsoft.Azure.Management.Sql, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\packages\Microsoft.Azure.Management.Sql.1.15.0-preview\lib\net452\Microsoft.Azure.Management.Sql.dll</HintPath>
+      <HintPath>C:\code\azure-sdk-for-net\src\SDKs\SqlManagement\Management.Sql\bin\Debug\net452\Microsoft.Azure.Management.Sql.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Azure.Management.Storage">
