Reverting changes in service fabric test and squashing all commits into one

--- a/src/ResourceManager/OperationalInsights/Commands.OperationalInsights/Commands.OperationalInsights.Netcore.csproj
+++ b/src/ResourceManager/OperationalInsights/Commands.OperationalInsights/Commands.OperationalInsights.Netcore.csproj
@@ -42,6 +42,7 @@
     <ProjectReference Include="..\..\..\Common\Commands.Common.Authentication.Abstractions\Common.Authentication.Abstractions.Netcore.csproj" />
     <ProjectReference Include="..\..\..\Common\Commands.Common\Common.Netcore.csproj" />
     <ProjectReference Include="..\..\Common\Commands.ResourceManager.Common\Common.ResourceManager.Netcore.csproj" />
+    <ProjectReference Include="..\..\..\Common\Commands.Common.Network\Common.Network.Netcore.csproj" />
   </ItemGroup>
 
   <ItemGroup>
