--- a/src/ResourceManager/Consumption/Commands.Consumption.Test/Commands.Consumption.Test.csproj
+++ b/src/ResourceManager/Consumption/Commands.Consumption.Test/Commands.Consumption.Test.csproj
@@ -128,12 +128,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScenarioTests\BudgetTests.cs" />
     <Compile Include="ScenarioTests\UsageDetailsTests.cs" />
     <Compile Include="ScenarioTests\TestController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="MSSharedLibKey.snk" />
     <None Include="packages.config" />
+    <None Include="ScenarioTests\BudgetTests.ps1">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="ScenarioTests\UsageDetailsTests.ps1">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
